option('with-liburing', type: 'boolean', value: true)
option('with-libaio', type: 'boolean', value: true)
option('with-spdk', type: 'boolean', value: true)
option('with-libvfn', type: 'boolean', value: true)
option('with-fio', type: 'boolean', value: true)

option('be_ramdisk', type: 'boolean', value: true)

option('cbi_admin_shim', type: 'boolean', value: true)
option('cbi_async_emu', type: 'boolean', value: true)
option('cbi_async_nil', type: 'boolean', value: true)
option('cbi_async_posix', type: 'boolean', value: true)
option('cbi_async_thrpool', type: 'boolean', value: true)
option('cbi_mem_posix', type: 'boolean', value: true)
option('cbi_sync_psync', type: 'boolean', value: true)

option('examples', type: 'boolean', value: true)
option('tests', type: 'boolean', value: true)
option('tools', type: 'boolean', value: true)

option('shared_library', type: 'boolean', value: true)

option('build_subprojects', type : 'boolean', value : true, yield : true)

option('enable-ysnp', type: 'boolean', value: true)

option('manpages', type: 'boolean', value: 'true', description: 'Install manpages for all CLI tools/examples/tests')
option('bash_completion', type: 'feature', value: 'disabled', description: 'Install bash-completions for all CLI tools/examples/tests')
