xnvme_inc = include_directories('.')

install_headers('libxnvme.h')
install_headers('libxnvme_adm.h')
install_headers('libxnvme_be.h')
install_headers('libxnvme_buf.h')
install_headers('libxnvme_dev.h')
install_headers('libxnvme_file.h')
install_headers('libxnvme_geo.h')
install_headers('libxnvme_ident.h')
install_headers('libxnvme_lba.h')
install_headers('libxnvme_libconf.h')
install_headers('libxnvme_nvm.h')
install_headers('libxnvme_pp.h')
install_headers('libxnvme_spec.h')
install_headers('libxnvme_spec_fs.h')
install_headers('libxnvme_spec_pp.h')
install_headers('libxnvme_util.h')
install_headers('libxnvme_ver.h')
install_headers('libxnvme_znd.h')
install_headers('libxnvmec.h')
