install_man('lblk-dir-receive.1')
install_man('lblk-dir-send.1')
install_man('lblk-enum.1')
install_man('lblk-idfy.1')
install_man('lblk-info.1')
install_man('lblk-read.1')
install_man('lblk-write-dir.1')
install_man('lblk-write-uncor.1')
install_man('lblk-write-zeros.1')
install_man('lblk-write.1')
install_man('lblk.1')
install_man('nvmec-create.1')
install_man('nvmec-show.1')
install_man('nvmec.1')
install_man('xdd-async.1')
install_man('xdd-sync.1')
install_man('xdd.1')
install_man('xnvme-enum.1')
install_man('xnvme-feature-get.1')
install_man('xnvme-feature-set.1')
install_man('xnvme-format.1')
install_man('xnvme-idfy-cs.1')
install_man('xnvme-idfy-ctrlr.1')
install_man('xnvme-idfy-ns.1')
install_man('xnvme-idfy.1')
install_man('xnvme-info.1')
install_man('xnvme-library-info.1')
install_man('xnvme-list.1')
install_man('xnvme-log-erri.1')
install_man('xnvme-log-health.1')
install_man('xnvme-log.1')
install_man('xnvme-padc.1')
install_man('xnvme-pioc.1')
install_man('xnvme-sanitize.1')
install_man('xnvme.1')
install_man('xnvme_file-copy-async.1')
install_man('xnvme_file-copy-sync.1')
install_man('xnvme_file-dump-async-iovec.1')
install_man('xnvme_file-dump-async.1')
install_man('xnvme_file-dump-sync-iovec.1')
install_man('xnvme_file-dump-sync.1')
install_man('xnvme_file-load-async.1')
install_man('xnvme_file-load-sync.1')
install_man('xnvme_file-write-read.1')
install_man('xnvme_file.1')
install_man('xnvme_hello-hw.1')
install_man('xnvme_hello.1')
install_man('xnvme_io_async-read.1')
install_man('xnvme_io_async-write.1')
install_man('xnvme_io_async.1')
install_man('xnvme_tests_async_intf-init_term.1')
install_man('xnvme_tests_async_intf.1')
install_man('xnvme_tests_buf-buf_alloc_free.1')
install_man('xnvme_tests_buf-buf_virt_alloc_free.1')
install_man('xnvme_tests_buf.1')
install_man('xnvme_tests_cli-optional.1')
install_man('xnvme_tests_cli.1')
install_man('xnvme_tests_enum-multi.1')
install_man('xnvme_tests_enum-open.1')
install_man('xnvme_tests_enum.1')
install_man('xnvme_tests_ioworker-verify-sync.1')
install_man('xnvme_tests_ioworker-verify.1')
install_man('xnvme_tests_ioworker.1')
install_man('xnvme_tests_lblk-io.1')
install_man('xnvme_tests_lblk-scopy.1')
install_man('xnvme_tests_lblk-write_uncorrectable.1')
install_man('xnvme_tests_lblk-write_zeroes.1')
install_man('xnvme_tests_lblk.1')
install_man('xnvme_tests_scc-idfy.1')
install_man('xnvme_tests_scc-scopy-msrc.1')
install_man('xnvme_tests_scc-scopy.1')
install_man('xnvme_tests_scc-support.1')
install_man('xnvme_tests_scc.1')
install_man('xnvme_tests_xnvme_file-file-trunc.1')
install_man('xnvme_tests_xnvme_file-write-fsync.1')
install_man('xnvme_tests_xnvme_file.1')
install_man('xnvme_tests_xnvmec-check-opt-attr.1')
install_man('xnvme_tests_xnvmec-copy-xnvmec.1')
install_man('xnvme_tests_xnvmec.1')
install_man('xnvme_tests_znd_append-verify.1')
install_man('xnvme_tests_znd_append.1')
install_man('xnvme_tests_znd_explicit_open-test_open_zdptr.1')
install_man('xnvme_tests_znd_explicit_open.1')
install_man('xnvme_tests_znd_state-changes.1')
install_man('xnvme_tests_znd_state-transition.1')
install_man('xnvme_tests_znd_state.1')
install_man('xnvme_tests_znd_zrwa-flush-explicit.1')
install_man('xnvme_tests_znd_zrwa-flush-implicit.1')
install_man('xnvme_tests_znd_zrwa-flush.1')
install_man('xnvme_tests_znd_zrwa-idfy.1')
install_man('xnvme_tests_znd_zrwa-open-with-zrwa.1')
install_man('xnvme_tests_znd_zrwa-open-without-zrwa.1')
install_man('xnvme_tests_znd_zrwa-support.1')
install_man('xnvme_tests_znd_zrwa.1')
install_man('zoned-append.1')
install_man('zoned-changes.1')
install_man('zoned-enum.1')
install_man('zoned-errors.1')
install_man('zoned-idfy-ctrlr.1')
install_man('zoned-idfy-ns.1')
install_man('zoned-info.1')
install_man('zoned-mgmt-close.1')
install_man('zoned-mgmt-finish.1')
install_man('zoned-mgmt-open.1')
install_man('zoned-mgmt-reset.1')
install_man('zoned-mgmt.1')
install_man('zoned-read.1')
install_man('zoned-report.1')
install_man('zoned-write.1')
install_man('zoned.1')
install_man('zoned_io_async-append.1')
install_man('zoned_io_async-read.1')
install_man('zoned_io_async-write.1')
install_man('zoned_io_async.1')
install_man('zoned_io_sync-append.1')
install_man('zoned_io_sync-read.1')
install_man('zoned_io_sync-write.1')
install_man('zoned_io_sync.1')